# toban

backend/: .envrc  Cargo.toml  Rocket.toml
backend/lib/openapi/: Cargo.toml  README.md
backend/lib/openapi/.openapi-generator/: FILES
backend/lib/openapi/api/: openapi.yaml
backend/lib/openapi/docs/: Assignment.md  Error.md  InlineResponse201.md  Member.md  New.md  NewMember.md  NewRole.md  Role.md  default_api.md
backend/lib/openapi/examples/client/: main.rs
backend/lib/openapi/examples/server/: server.rs
backend/lib/openapi/src/: lib.rs  models.rs
backend/lib/openapi/src/client/: mod.rs
backend/lib/openapi/src/server/: mod.rs
backend/migrations/2021-05-08-092318_user/: up.sql
backend/migrations/2021-05-13-123844_members/: down.sql  up.sql
backend/migrations/2021-05-17-234335_roles/: down.sql  up.sql
backend/migrations/2021-06-10-134915_assignments/: down.sql  up.sql
backend/src/: lib.rs  main.rs  mod.rs  models.rs  schema.rs
backend/src/controllers/: mod.rs  static_content.rs
backend/src/controllers/api/: assignments.rs  member.rs  mod.rs  role.rs
backend/src/controllers/transfer/: time.rs
backend/src/db_connection/: mod.rs
backend/src/domain/: mod.rs
backend/src/domain/assignment/: assignment.rs  mod.rs  repository.rs
backend/src/domain/member/: member.rs  mod.rs  repository.rs
backend/src/domain/role/: mod.rs  repository.rs  role.rs
frontend/: .eslintrc.js  .prettierignore  build.js  jest.config.ts  package-lock.json  package.json  tsconfig.json
scripts/: api.sh  build-frontend.sh  db.sh  openapi_gen.sh
(+71 files in other folders)
