[package]
name = "toban_backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
dotenv = "0.15.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.diesel]
version = "1.4.6"
features = ["mysql"]

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["diesel_mysql_pool", "json", "serve"]

[dependencies.openapi_client]
path = "./lib/openapi"
